--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -133,7 +133,6 @@
  HNN_Den_Xiao_Ping_hog:0 "邓小平"
  HNN_Chen_Yi_for:0 "陈毅"
  HNN_Zhou_En_Lai_for:0 "周恩来"
- HNN_Geng_Biao_for:0 "耿飚"
  HNN_guo_moruo_for:0 "郭沫若"
  HNN_li_wei_han_for:0 "李维汉"
  HNN_tang_xiangming_hog:0 "汤芗铭"
@@ -163,7 +162,9 @@
  HNN_tang_shengming:0 "唐生明"
  HNN_tao_zhiyue:0 "陶峙岳"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
-
+ 
+ HNN_shi_qi_gui_sec:0 "石启贵"
+ HNN_shi_qi_gui_sec_desc:0 "§Y生于：§!§L1896年；大清帝国、湖南省吉首§!\n§Y派系：§!§c无派系§!\n§Y背景：§!§L石启贵作为湘西苗族知识分子，长期致力搜集苗族文化资料，引进外面先进生产技术，力求发展民族政治经济，探索苗族发展强大之路。他认为弘扬苗族优秀文化是很必要的，但更不能忽视的是发展苗区经济，摆脱贫困，争取政治平等。因此，他从苗族的生存和发展出发，把苗族文化研究和苗族政治经济文化的发展结合起来，作为最知名的两位湘西苗族，他和沈从文是中国其他地方了解湘西苗族的一扇窗口。§!"
  HNN_tang_duo_cair: "唐铎"
  HNN_tang_duo_cair_desc:0 "§Y生于：§!§L1904年；大清帝国、湖南省益阳\n§Y派系：§!§r工团党§!\n§Y背景：§!§L唐铎生于新世纪之初的1904年，出生于教师家庭，因此唐铎从小就接受了良好的教育。他在湖南省立第一师范学校就读时，结识了他后来的中国工团党同志任弼时。两人与同为湖南革命者的蔡和森一道，作为法兰西公社勤工俭学计划的一员前往法国。正是在此期间，唐铎成为了中国工团党的坚定成员。\n\n1923年，受谭延闿之邀，因其留法的教育背景，唐铎被派往中国，帮助孙中山组建飞机制造厂。1924年，为了与国民党建立统一战线，唐铎成为了国民党的正式成员，他也是飞机制造厂选派来的实习生之一，作为首批学员，他们后来都成为了中国革命空军的一员。1925年，在国民党代表刘云和广州国民政府的请求下，唐铎被送往意大利社会主义共和国、法兰西公社和新生的不列颠联盟接受进一步的军事航空培训。\n\n唐铎原计划于1927年北伐战争期间回国，但由于北伐失败，他未能及时成行。唐铎对未能参与这场革命感到沮丧，于是在1932年，他与邓演达及其他革命者一道回国，按照计划参与了上海起义，不过起义再次失败了。§!"
  HNN_zhao_junmai_for: "赵君迈"
@@ -607,6 +608,10 @@
  HNN_shen_cong_wen_add_tooltip:0 "使$HNN_shen_cong_wen_effect$"
  HNN_shen_cong_wen_helpful_tooltip:0 "§n有沈从文作为顾问会使$HNN_shen_cong_wen_effect$§!"
  HNN_shen_cong_wen_is_helpful_tooltip:0 "§G沈从文在我们的政府中工作会$HNN_shen_cong_wen_add_tooltip$§!"
+ HNN_chen_quzhen_effect: "§Y两巨头相关的决议§!增强"
+ HNN_chen_quzhen_add_tooltip: "使$HNN_chen_quzhen_effect$"
+ HNN_chen_quzhen_helpful_tooltip: "§n有石启贵作为顾问会使$HNN_chen_quzhen_effect$§!"
+ HNN_chen_quzhen_is_helpful_tooltip: "§G石启贵在我们的政府中工作会$HNN_chen_quzhen_add_tooltip$§!"
  HNN_wang_tianpei_effect: "§Y两巨头相关的决议§!增强"
  HNN_wang_tianpei_add_tooltip:0 "使$HNN_wang_tianpei_effect$"
  HNN_wang_tianpei_helpful_tooltip:0 "§n有王天培作为顾问会使$HNN_wang_tianpei_effect$§!"
@@ -825,7 +830,7 @@
  hnnelection.3.b:0 "农民听信了赵恒惕的发言"
  hnnelection.3.c:0 "陈渠珍竭尽所能把水端平。"
  hnnelection.4.t:0 "乡村选战"
- hnnelection.4.d:0 "以历史来看，谭延闿省长的支持主要来自于城市地区。这轮选举也并不例外，农民对于长沙政府普遍冷漠，他自然无法在这一群体中争取到多数支持。对于另外两位候选人则是另一番情况。赵恒惕一直关注那些长沙政府关注不到的群体，试图通过这样的方式来使得自己能够上台。陈渠珍则自不必说，湘西本身就是由许多农村乡镇组合而成的，他在农村有着得天独厚的优势。"
+ hnnelection.4.d:0 "以历史来看，谭延闿省长的支持主要来自于城市地区。这轮选举也并不例外，农民对于长沙政府普遍冷漠，他自然无法在这一群体中争取到多数支持。对于另外两位候选人则是另一番情况。赵恒惕一直关注那些长沙政府关注不到的群体，试图通过这样的方式来使得自己能够上台。陈渠珍则自不必说，湘西本身就是由许多农村乡镇组合而成的，他在农村有着得天独厚的优势，尤其是湘西巨大的苗族人口，他们对于陈渠珍对湘西的贡献有着强烈的信任。"
  hnnelection.4.a:0 "赵恒惕舌灿莲花，确保农民支持！"
  hnnelection.4.b:0 "陈渠珍略胜一筹，得到多数支持！"
  hnnelection.5.t:0 "长沙与贵州"
@@ -883,7 +888,11 @@
  hnn.12.t:0 "国民革命军之真魂"
  hnn.12.d:0 "和我们的黄埔同仁一样，国民革命军第六、第八军也传承着国民革命的精神，肩负着救国救民的重任。作为祖国最优秀的儿女，湖南国民革命军的军官们是一股有着大无畏革命精神的力量，全身心地致力于实现孙中山先生未尽的梦想。\n\n他们很清楚，一旦在战场上为党捐躯，他们的家庭、梦想、希冀以及生命，一切都将随之消散。但是，他们却依旧舍生忘死，不辱使命。只因他们坚信，人终有一死，但他们将会永存于每个中国革命者的心中。我们英勇无畏的军官将以视死如归的心境射向军阀、恶霸、劣绅和帝国主义者的心脏。中国的未来岌岌可危，为了救国救民，他们将牺牲一切。"
  hnn.12.a:0 "以将士之牺牲，换国民之革命。"
-
+ hnn.13.t:0 "苗民的希望"
+ hnn.13.d:0 "近年来苗族知识分子、议员石启贵多次向省政府上书希望在省议会中扩大苗族的议员席位，因为如今目前苗族所得到的席位不过寥寥三四。他上书称：“苗族和其他少数民族人民也是中华民族大家庭中的一员，应该与汉族等其他民族享有同等权利，可是有史以来都没有资格参加研究和管理国家大事...苗民等土著民族历受政治经济压迫，千百年来不堪言状，以无人代表参政之原因，故得不到均等享受之利益。”他同时也上书希望加大对湘西的开发投入，让苗民享受到和汉民一样的教育，希望在湖南实现民族平等云云。这些上书也得到了其他少民议员的赞同，但是同时也引来了一些反对的声音，尤其是有些人试图将石启贵打为赤匪同谋，这也让石启贵的上书变得更加困难。"
+ hnn.13.a:0 "无论如何，苗民的希望是值得尊重的。"
+ hnn.13.b:0 "我们没有必要听取这些异己的声音。"
+ 
  hnn.55.t:0 "湘江事变"
  hnn.55.d:0 "警方对当地关于湘江上可疑船只的传言嗤之以鼻。然而常德近期爆发了一场大型枪战，共造成12人死亡，大量人员受伤。警方初步调查后发现，本事件与传言中的奇怪驳船有关，并以此为线索展开深入调查。许多人认为，这些船只是普通船只，当务之急是逮捕枪战的参与者。但另一部分人声称，枪战和被标记的船只是未来更大事件出现的预兆。"
  hnn.55.a:0 "我觉得这没啥——把那些麻烦的家伙抓起来，问题就解决了。"
@@ -1255,7 +1264,7 @@
  POLITICS_HNN_CHEN_YUN_DESC:0 "陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。\n\n他有着党内其他人所没有的经济头脑，他不同于市场派那样直接投入反革命的怀抱，也不像某些人那般要求全面的计划经济，他会平衡好双方，走一条独属于中国的特色社会主义经济路线。"
  POLITICS_HNN_Chen_Yun_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年6月13日，大清帝国 江苏省 青浦县§!\n§Y军旅生涯：§!§g陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。"
  HNN_Qian_Xuesen: "钱学森"
- HNN_Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族。、，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
+ HNN_Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
  Guo_Mo_DESC:0 "郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。"
  HNN_Hu_Yao_Bang: "胡耀邦"
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。\n\n如今他正式肩负起领导全中国政府的重任，稳定、和平、温和将是他执政的方针。"
@@ -1295,7 +1304,10 @@
  HNN_Xu_Si_You: "许世友"
  POLITICS_HNN_XU_SI_YOU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年2月28日，大清帝国 河南省 新县§!\n§Y军旅生涯：§!§g许世友生于新县田铺乡贫农家庭，八岁入少林寺习武，练就一身硬功夫。1921年因路见不平打死地主家丁，被迫流落江湖。1926年加入吴佩孚部队当兵，受北伐军影响秘密接触工团思想。\n\n1927年黄麻起义期间，率少林俗家弟子组成「佛兵连」，用齐眉棍突破城门，正式加入中国工团党。起义失败后，带残部转战大别山区，次年春突破封锁进入湖南平江，与王震游击队会合。\n\n在湘鄂赣根据地期间，将少林拳法与游击战术结合，独创「夜战八式」：破戒斩首、罗汉撞钟、金刚伏魔等招式威震敌胆。在长沙战役中，率「铁头队」用硬气功撞开城门，为彭德怀主力打开通道。因其作战时必先念《往生咒》，被赵恒惕军称为「超度将军」。" 
  HNN_geng_biao: "耿飚" 
- POLITICS_HNN_GENG_BIAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1909年8月26日，大清帝国 湖南省 醴陵县§!\n§Y军旅生涯：§!§g耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，13岁赴常宁水口山铅锌矿当童工，在矿井巷道中磨炼出过人胆识。1925年参加矿工暴动，手持钢钎与矿警对峙，自此得诨号「耿大胆」。1926年随北伐军运输队转战湘鄂，于武昌战役中冒死运送弹药，火线加入中国工团党。\n\n大革命失败后，耿飚以铁匠身份为掩护，在浏阳、平江一带组建地下交通站，独创「打铁传讯」法——以不同节奏的锻铁声传递情报。1928年参与醴陵年关暴动，率农军夜袭团防局，缴获十二支汉阳造，组建湘东游击队第一支队。\n\n因其精通多地方言且擅山地行军，常扮作货郎、风水先生穿梭三省边界，为董必武部与袁文才部建立秘密联络通道。1930年平江会师时，耿飚所部已发展至千人规模，以「铁脚板」著称，创下三日奔袭二百四十里奇袭敌后的记录。"
+ HNN_Geng_Biao_for:0 "耿飚"
+ HNN_geng_biao_carm:0 "耿飚"
+ POLITICS_HNN_GENG_BIAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1909年8月26日，大清帝国 湖南省 醴陵县§!\n§Y军旅生涯：§!§g耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
+ HNN_geng_biao_carm_desc:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
  HNN_Lin_Bo_Qu: "林伯渠" 
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
 
@@ -1666,7 +1678,7 @@
  hungong.16.d:0 "随着国民党革命再次在军阀和反动势力围剿中失败，以何叔衡为首的同国民党持合作态度的文官派彻底坠入谷底。不过何叔衡很快摆脱了悲伤，在演讲中将“国民党内部严重的党争和派系林立使得其无法有效组织中国工农进行强有力地革命推翻封建主义和帝国主义对中国的压迫”视作其失败的原因。\n\n但目前更重要的是，一大批前国民党左派以及同国民党左派进行合作的前工团党员重新加入了党内，这毫无疑问为我们提供了大量人才进行革命政权的建设，但也让党内的思想变得复杂起来。"
  hungong.16.a:0 "以后只能靠我们自己了"
  hungong.17.t:0 "给党内同志的一封信"
- hungong.17.d:0 "“过去一个时期工作中所出现的一些缺点错误，原因是多方面的。其客观因素是我们对社会主义建设工作不熟悉，没有完整的经验。对社会主义有计划按比例发展的规律体会不深，对两条腿走路的方针，没有贯彻到各方面的实际工作中去。我们在处理经济建设中的问题时，总还没有其他政治军事问题那样得心应手。另方面，客观形势是我省一穷（还有一部分人吃不饱饭，去年棉布平均每人还只十八尺，可缝一套单衣和两条裤衩）二白的落后状态，人民迫切要求改变现状。其次是国际形势的有利趋势。这些也是促使我们计划上有些过高的重要因素。利用这一有利时机，适应广大人民要求，加速我们的建设工作，尽快改变我们一穷二白的落后面貌，创造更为有利的国际局面，是完全必要和正确的。\n\n过去一个时期，在我们的思想方法和工作作风方面，也暴露出不少值得注意的问题。这主要是：\n\n1，浮夸风气较普遍地滋长起来...\n\nn2，腐败分子的狂热性...”"
+ hungong.17.d:0 "“过去一个时期工作中所出现的一些缺点错误，原因是多方面的。其客观因素是我们对社会主义建设工作不熟悉，没有完整的经验。对社会主义有计划按比例发展的规律体会不深，对两条腿走路的方针，没有贯彻到各方面的实际工作中去。我们在处理经济建设中的问题时，总还没有其他政治军事问题那样得心应手。另方面，客观形势是我省一穷（还有一部分人吃不饱饭，去年棉布平均每人还只十八尺，可缝一套单衣和两条裤衩）二白的落后状态，人民迫切要求改变现状。其次是国际形势的有利趋势。这些也是促使我们计划上有些过高的重要因素。利用这一有利时机，适应广大人民要求，加速我们的建设工作，尽快改变我们一穷二白的落后面貌，创造更为有利的国际局面，是完全必要和正确的。\n\n过去一个时期，在我们的思想方法和工作作风方面，也暴露出不少值得注意的问题。这主要是：\n\n1，浮夸风气较普遍地滋长起来...\n\n2，腐败分子的狂热性...”"
  hungong.17.a:0 "印发各级同志参考"
  hungong.18.t:0 "《一江春水向东流》在湖南上映"
  hungong.18.d:0 "由蔡楚生、郑君里导演，白杨、陶金、舒绣文、上官云珠主演的《一江春水向东流》是一部210分钟长电影.电影讲述了南京一个家庭在八省巨变之中发生的悲欢离合的故事。这部电影描绘了工人阶级的不屈不饶的精神，和军阀治省下对普罗大众的残酷剥削。很多人认为这部电影是对资产阶级的直接攻击。不过，这部电影在票房和评论界中都获得了极大地成功。"
@@ -3383,6 +3395,9 @@
  hungong.173.t:0 "群众的语言"
  hungong.173.d:0 "长期以来以教师“李子任”身份进行学生运动和地下情报工作的毛泽东同志，因为其独特的教育理念和丰富的工作经历，在经过工农代表大会和党中央委员会的统一表决以最高票数被任命为新的湖南工团党政府的文化与教育部长，在毛同志就职后，他立刻召集了党在教育行业的同志们召开了一场特别会议，在会议上其指出“我们是革命党，是为群众办事的，如果也不学群众的语言，那就办不好。”在工农夜校和新的教育体系中，讲课务必要通俗易懂，讲农民一听就懂的话，“讲打倒帝国主义就说，打倒洋财主嘛。”在大会最后，毛同志讲道：“我们工团党人好比种子，人民好比土地。我们到了一个地方，就要同那里的人民结合起来，在人民中间"
  hungong.173.a:0 "生根、开花！”"
+ hungong.175.t:0 "懒得个"
+ hungong.175.d:0 "在占领了湖南全境后，红军得到了极大的补充，但是也因此带来了一些矛盾。在一次例行点名上，一位战士晚到了一些，耿飙团长派人叫了三四次人才到便有些恼怒。他问：“你为什么才到？”那位战士低头不语。这使耿团长有点生气，便大声喝问：“讲！为什么来晚了！”他嘟哝了一句：“我懒得个。”“什么？”素有耿猛子之名的耿团长顿时大火“大家都一样嘛，为什么单单你懒得个？”那战士又顶了一句：“就是懒得个嘛。”耿团长更火了，顺手给了他一拳。这事成了士兵委员会的议题，他们当晚便召集了军人大会，对身为士兵委员会委员的耿飙实行“弹劾”。耿团长犯的错误是“军阀主义”“官长打士兵”和《八项注意》中“不许打人骂人”的前半部。“说话和气”一条，大家认为可以忽略不计。\n\n指定耿团长发言的时候，他说，我打人是不对，但是那位同志对操课偷懒，也该“民主”一下这下，会场上开锅了。一部分人说，他“懒得个”有什么错了？有的说：“懒得个”也是犯纪律，要处分。士兵委员会主席是位三十岁左右的老同志，他恍然大悟，敲敲茶缸让大家肃静，站起来解释说：“‘懒得个’是生病了，不是偷懒。他是永兴县人，讲的是家乡方言。”耿飙顿时明白，这里边有误会，因为在湖南，“懒得个”是“不愿去”，还带有对某件事不屑一顾的意思。他说：“明白了。请大家处置吧，我错了。”大家见他态度诚恳，又加上有误会的因素，决定罚一元钱，因为毕竟耿团长打了人。于是，耿飙认罚。交一元钱——整整一个月的零花钱，事后又与那个战士和好如初。"
+ hungong.175.a:0 "一场误会"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
@@ -3601,6 +3616,9 @@
  hunarmy.49.t:0 "龙与鹰的邪恶同盟"
  hunarmy.49.d:0 "柏林的皇家宫殿，中国国家主席[ROOT.GetLeader]等高级干部，与德皇威廉二世/威廉三世等高级官员在一起吃饭。在宴席上，[ROOT.GetLeader]与德皇达成几项协议，第一、中国出兵北上袭击俄罗斯后方，德国需要给中国提供工业项目，帮助中国完成工业化。第二、中国会与德国联手，解决德国在亚洲的大敌日本，并在战后瓜分日本。第三、对亚洲和大洋洲的协约国势力，德属东亚殖民地将会提供与中国一路，将协约国势力扫清，并进行瓜分。当协议达成一致，并签署后。[ROOT.GetLeader]与德皇起身，两个人肩并肩摄影师拍下了这张照片，想必这种照片会流传后世。"
  hunarmy.49.a:0 "历史见证这一刻"
+ hunarmy.50.t:0 "命运的歧点"
+ hunarmy.50.d:0 "汽笛声刺破清晨的亚历山大广场火车站，皇帝卫队的士兵紧张地核对登车的人员物资清单。跟在彰显参会人员高贵身份的奢侈装饰品之后，是难以计数的弹药、枪支与坦克，飞机的嗡鸣与火车鸣笛声谱成了一曲压抑而不安的协奏曲。七个时区外，南苑火车站也是一副相似的景象，只是由黑发黑眼的8341部队取代了金发碧眼的皇帝卫队。横跨几乎整个欧亚大陆，两大帝国的注意力都在向一个地方汇去：叶卡捷琳堡，这座曾经象征着欧洲文明对东北亚政府的城市，如今再一次走到了欧亚对抗的最前沿。由于双方对会谈地点各执一词，最终不得不定在了划开欧亚大陆的乌拉尔山脚下的，这座已经被来自东西两方征服的城市。这里即将举行的，是德意志帝国皇帝陛下威廉二世与中华共和国主席叶剑英的首次面对面会谈。\n\n若干年前，以中国加入帝国公约为条件，中德两国决定携手御敌，在击溃了世界上每一个主要国家后，新秩序降临了，世界浸润在铁与血之中，每个人的灵魂都因暴力而如痴如醉。从柏林到北京，每个人都高呼着同样的口号：“真理只在大炮射程之内！”全世界都匍匐在两国的脚下，他们都尝到了战争的滋味，无论胜败，暴力都像毒品一般让他们意乱神迷。双方都明白，当他们开启以暴力争夺权力的那一刻起，竞技场上就注定只能有一位冠军。\n\n在叶卡捷琳堡宫的大理石穹顶之下，两位暴力的崇拜者首次面对面端详彼此。“皇帝陛下！能与您如此交谈，实在是我的荣幸，请允许我代表全中国人民敬您一杯！”，叶主席高举红酒杯，内盛的液体晃动许久，仿佛映照此刻本人的心境，“恭喜你，主席阁下，在你的带领下，想必东方在不久之后就一定能摆脱愚昧与野蛮。”实木餐桌的另一侧，德皇端起自己的酒杯，向对方示意。“感谢您的祝愿，皇帝陛下，我们中华民族一向热爱和平，如今其他侵略者都已在我们伟大同盟的正义之师脚下臣服，全世界的和平想必已经指日可待！”“我从不怀疑这一点，主席阁下。”\n\n说罢，二人同时起身。双臂前举，总参谋部的将军在作战地图上画出箭头；酒杯相碰，枪机上膛的金属碰撞铿然有声；二人微笑，无数新的孤儿寡母的放声哭泣替代被淹没的陈旧呜咽；目光交汇，无数的陌生人为了陌生的领袖前去杀死陌生的彼此。命运的歧点轰然作响，嘲笑着无数彷徨的灵魂。"
+ hunarmy.50.a:0 "“致世界和平！”"
 
  #毛泽东
  hunmao.1.t:0 "荒唐的决定"
