--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -118,6 +118,10 @@
  QIE_ZHANG_YINWU_ARMY_DESC:0 "§Y陆军将领介绍\n生于：§!§g1891年；大清帝国、直隶省保定§!\n§Y军旅生涯：§!§g虽然张荫梧出生于保定，他却在黑龙江省陆军小学就读，此后于1916年才入学保定陆军军官学校第5期生，学习步兵战术。在他于1918年毕业以后，他曾经短期内在山西担任过基层指挥官、参谋以及军训副主任，在任上他受到了阎锡山的青睐。1926年，冯玉祥发动反叛，被逐出北京并撤往山西，张荫梧曾率领晋系军队抵抗冯玉祥的国民军，并在战场上负伤，因此暂时辞职归乡。当第四次直奉战争爆发之时，张荫梧加入了直系军队，他的部队则成为了保卫北京的先头部队。1927年宣统复辟以后，他回到了他的故乡，并致力于地方教育事业。现在，因为复辟的清廷需要发挥他的才能，他又在数名中国青年党成员的邀请下重新加入了军队。§.\n\n§Y重要信息：张荫梧是乡村自治运动的支持者，也是他故乡一所小学和一所中学的校长，在那里，学校将教育、军事训练以及农业实践结合到一起。张荫梧也是中国青年党的一名成员。"
  QIE_yan_huiqing: "颜惠庆"
  POLITICS_QIE_YAN_HUIQING_DESC:0 "§Y生于：§!§L1877年4月2日；大清帝国、江苏省上海县§!\n§Y背景：§!§L颜惠庆接受了良好的启蒙教育，后前往美国学习，曾获得高度赞誉，结识了伍廷芳、周自齐并于他们建立了深厚的友谊。\n\n颜惠庆通过伍廷芳的关系，成为中国驻美使馆的职员。在周自齐的推荐下，颜惠庆奉召回国出任外务部新闻处处长。辛亥革命爆发后，他得到了袁世凯的器重。\n\n颜惠庆曾担任驻德公使，也曾担任凡尔赛和会的顾问，由于对和会极为失望而提前离席回国。后来，颜惠庆受命署理靳云鹏内阁的外交总长，在连续三届内阁中担任外交总长，于1921年出任代理国务总理。1924年，在曹锟的要求下，颜惠庆再度出任国务总理，但因北京政变而迅速倒台。\n\n吴佩孚于1926年重返北京后，颜惠庆内阁也得以再度上台。在与张作霖发生争执后，颜惠庆曾一度退出政坛，并将主要精力放在支持红十字会上。后来，他短暂出任驻美公使。因美国政局动荡，颜惠庆被召回国内。\n\n被选为总统的颜惠庆和他那些外交系中的同事们一样，心怀一丝不苟的职业精神。虽然颜惠庆缺乏具体的政治意识形态，但他以其真诚弥补了这一空缺。§!\n\n§Y备注：颜惠庆的英语非常流利，造诣极深。\n他学生时期就成绩优异，长年致力于推动教育发展，曾为多所中国大学争取到经济援助，并因此闻名。§!"
+ QIE_wang_kemin_eco:0 "王克敏"
+ QIE_wang_kemin_eco_2:0 "王克敏"
+ QIE_wang_kemin_eco_desc: "§Y生于：§!§L1876年5月4日；大清帝国、广东省§!\n§Y派系：§!§g津保派§!\n§Y背景：§!§L1903年，王克敏考中举人，后又经东三省总督赵尔巽和山东巡抚杨士骧的疏通，才得以出任直隶视察使。同年，他奉派前往日本担任驻日公使馆参赞，为清政府充当代理人，以控制留日的激进学生。1907年，他回到度支部、外务部任职，又投直隶总督府，充当总督杨士骧的幕僚。\n\n辛亥革命后，王克敏感到仕途无望，于是赴法国游历，认识了不少金融界的大亨，在金融界声名鹊起。回国后他在财政部任职，并担任中国银行总裁，开始涉足银行业。\n\n王克敏1917年担任财政总长时，因其过目不忘的记忆力和聚敛财富的本事而获得了“活账本”和“钱鬼子”的称号。曹锟任命他解决金法郎案，王克敏因此与国务总理孙宝琦发生了冲突，但曹锟保护了王克敏，导致孙宝琦引咎辞职。\n\n北京政变爆发后，王克敏仍在奉系治下的北京政府中任职，后于1928年叛逃，张作霖对他发出了逮捕令，最终直系重新接纳了他。1932年，时任天津市市长的王克敏再次担任中国银行总裁一职。§!\n\n§Y备注：王克敏总是喜欢摆老资格以凌驾于年轻同僚之上。\n尽管因年事已高表面上看起来与世无争，但这无法掩盖他对权力的强烈渴望。§!"
+ QIE_wang_kemin_eco_2_desc: "§Y生于：§!§L1876年5月4日；大清帝国、广东省§!\n§Y派系：§!§g津保派§!\n§Y背景：§!§L1903年，王克敏考中举人，后又经东三省总督赵尔巽和山东巡抚杨士骧的疏通，才得以出任直隶视察使。同年，他奉派前往日本担任驻日公使馆参赞，为清政府充当代理人，以控制留日的激进学生。1907年，他回到度支部、外务部任职，又投直隶总督府，充当总督杨士骧的幕僚。\n\n辛亥革命后，王克敏感到仕途无望，于是赴法国游历，认识了不少金融界的大亨，在金融界声名鹊起。回国后他在财政部任职，并担任中国银行总裁，开始涉足银行业。\n\n王克敏1917年担任财政总长时，因其过目不忘的记忆力和聚敛财富的本事而获得了“活账本”和“钱鬼子”的称号。曹锟任命他解决金法郎案，王克敏因此与国务总理孙宝琦发生了冲突，但曹锟保护了王克敏，导致孙宝琦引咎辞职。\n\n北京政变爆发后，王克敏仍在奉系治下的北京政府中任职，后于1928年叛逃，张作霖对他发出了逮捕令，最终直系重新接纳了他。1932年，时任天津市市长的王克敏再次担任中国银行总裁一职。§!\n\n§Y备注：王克敏总是喜欢摆老资格以凌驾于年轻同僚之上。\n尽管因年事已高表面上看起来与世无争，但这无法掩盖他对权力的强烈渴望。§!"
 
  QIE_manchu:0 "大清帝国维新国策树"
  QIE_zhili:0 "大清帝国直系军阀国策树"
@@ -988,6 +992,7 @@
  liumenggeng2_incomplete:0 "计划的第二阶段尚未完成。"
  liumenggeng3_incomplete:0 "计划的第三阶段尚未完成。"
  zhili_manchu_war:0 "我们已经开展了镇压直系余孽的行动。"
+ QIE_wang_kemin_improved: "§Y王克敏§!获得§Y银行界红人§!特质，其效果为：\n-$MODIFIER_POLITICAL_POWER_GAIN$：$RIGHT|+=$§G+0.10§!\n-$MODIFIER_CONSUMER_GOODS_FACTOR$：$RIGHT|+=%0$§Y-10%§!\n-$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$：[?0.05|+=%]"
  won_zhili_manchu_war:0 "我们在战斗中击败了直系余孽。"
  germany_support:0 "我们得到了德国的援助。"
  reunification_war_prepped:0 "我们已经为统一做好了准备。"
@@ -2014,6 +2019,12 @@
  qieflavor.57.t:0 "三弟的墓志铭"
  qieflavor.57.d:0 "烈火和钢铁摧毁了“笑面虎”的昔日领地，当地本就屈指可数的现代化进步成果现已荡然无存，接踵而至的是战争带来的生灵涂炭，这一切都在迫使难民逃离昔日的八省联合境内。我们治下的不少人正匆忙设立难民救济机构和慈善组织，以帮助这些流离失所者。令人惊讶的是，一位意想不到的资助者出现了。\n\n曹锟大帅如今成为了难民救济事业的核心人物，这的确是一道不同寻常的景象。尽管他年事已高、体弱多病，但老帅还是尽其所能动员并呼吁更多的捐款和资金以帮助流离失所的难民，并为此捐献了大半年薪，赢得了北京和外国媒体的一致赞扬。许多报刊将曹锟大帅与当年在救灾扶贫工作中表现出色的曹锐（曹锟的弟弟，曾任直隶省省长）相提并论。人们对曹锟大帅的动机众说纷纭，有人认为这是他为了抗衡吴佩孚而发起的一次公关战，也有人认为他是以此致敬去世多年的弟弟曹锐，曹锐之死给老帅造成了沉重的打击，导致他曾一度辞去所有公职。\n\n曾经为了登上大总统宝座而向议员行贿、挥金如土的曹锟，如今却号召人们捐款帮助穷苦大众，曹锟的真正动机也许只有他自己知道。"
  qieflavor.57.a:0 "“要是三弟仍在人世...”"
+ qieflavor.58.t:0 "骗子大王"
+ qieflavor.58.d:0 "诚然，北洋体制金玉其外，内部却早已被那些目无法纪的无良之辈蛀空了。旧皖系和奉系都与日本有着千丝万缕的联系，会为了一己之利不惜出卖国家和自己。而在北直系，尤其是津保派众人中，也不缺这种贪污腐败之辈。曹锟的弟弟曹锐就是其中之一，此人因其贪污公款、腐败受贿而臭名昭著，他积累的财富是他哥哥的足足二十倍。另一个例子是边守敬，他本是革命的典范，却由于长期浸润在国会中而开始同流合污。\n\n但在财政总长王克敏的“光辉事迹”面前，这两人也自愧不如。王克敏是内阁耆宿，也是国内外银行的宠儿。尽管他并不擅长实际的金融管理，但他记忆力卓著，对账目中的各种数字过目不忘，并籍此积聚了大量的财富。\n\n靠着从他的外国银行朋友手中获取大笔资金的能力，王克敏成为了政府中不可或缺的人物。王克敏是个反复易怒、年老体衰的政客，尽管其资历尚不如高凌霨，但他会对出席会议的年轻派系成员（如白坚武和彭允彝）随意指手画脚，甚至为此打断内阁会议。尽管如此，王克敏执掌的财政部在债务和经济领域都成果卓著，他因此得到了国会的交口称赞。"
+ qieflavor.58.a:0 "庙堂之上，必有朽木。"
+ qieflavor.59.t:0 "北洋钱鬼子"
+ qieflavor.59.d:0 "王克敏总长一贯以来因其傲慢无礼的态度、毫无底线的立场和肆无忌惮的行径而引起了洛派诸人的极大愤怒。其中尤为典型的是王克敏与玉帅的左膀右臂白坚武之间的一次经历。当时王克敏去北京，而白坚武邀请他共进晚餐。\n\n席间，王克敏倚老卖老，带着教训的口气对白坚武说：“白先生，别看你是直系的元老，跟德国人打交道，你还要跟着我学。德国人是很难缠的，有时候谈判桌上谈好了的事情，下来他们就会翻脸不认账，很不讲信誉，你可要注意哟。”\n\n饭后，王克敏又把白坚武拉到一边，对他小声说：“我都快70岁的人了，快要入土了，管他什么卖国贼不卖国贼，反正当不了几年，到时两眼一闭，呜呼哀哉。你看吴大帅，和德国人纠缠，自己下水也就罢了，何必把一些年轻人也拖下水，跟着他当卖国贼挨骂呢，他做的可是缺德的事情呀。”\n\n之后，王总长痛斥吴佩孚不仅是卖国贼，而且连他自己对洋人租界的原则都卖了。白坚武对他的言论大为震惊，只能结结巴巴地回应。而王克敏只是扬起眉毛，咧嘴一笑，然后轻轻摘下帽子行礼，从白坚武的家里中踉踉跄跄地走出。不管王克敏在这位“吴佩孚幕僚”心中曾经有过什么伟岸的政治家形象。在看到“钱鬼子”的这些荒诞行径后，这份美好形象都荡然无存了。"
+ qieflavor.59.a:0 "“老狗嘴里吐不出象牙。”"
  qieflavor.102.t:0 "分道扬镳"
  qieflavor.102.d:0 "对于许多国人而言，白坚武象征着玉帅一路而来的升迁之路。不管吴佩孚跃居何位，白坚武总是能紧随其后。不过，白坚武的仕途生涯与北方的其他知识分子并无不同。他出生于直隶省，曾参加科举巧中秀才，后就读于天津北洋法政专门学校，并与同样来自直隶的同学李大钊结为至交。两人联合创办了法政杂志《言治》，宣扬他们的进步思想。\n\n毕业后，两人仍每月互致信件和电报维持联系。直皖战争后，白坚武愈发相信吴佩孚是北洋军阀中唯一值得自己效忠的人。在1920年8月写给李大钊的月信中，白坚武向李大钊介绍了吴佩孚，希望他能与自己一道支持玉帅。李大钊同意与吴佩孚的另一位盟友孙丹林会面。两年过后，第一次直奉战争刚落下帷幕不久，白坚武就立即请愿吴佩孚聘请李大钊为战略顾问。\n\n尽管李大钊最终并未加入吴佩孚一方，但他依旧数次奔赴洛阳，协助玉帅筹划恢复北洋国会、实现和平统一的方案，为“好人政府”运动开了个好头。白坚武则造访了李大钊在努力会的朋友——一群希望与吴佩孚合作以建立民主政府的京内知识分子，在那里他见到了几年前李大钊曾介绍给自己的胡适。\n\n白坚武对这名理想主义知识分子印象深刻，希望与其深化合作。只可惜，吴佩孚与努力会未能达成一致：吴佩孚拒绝在联省问题上作出任何让步，努力会的知识分子也因其镇压京汉铁路的工团罢工而不再视其为革命将军。随着吴佩孚逐渐失去第三国际的青睐，李大钊也与老友白坚武断绝了来往。\n\n当吴佩孚的上级曹锟贿赂北京国会选举他为大总统并驱逐黎元洪时，世人对“好人政府”运动的任何幻想都破灭了。胡适宣布努力会就此退出军阀政坛，结束“好人政府”运动；白坚武继续辅佐吴佩孚，李大钊则愈发靠拢国民党的革命政治。"
  qieflavor.102.a:0 "只是当时已惘然..."
@@ -2253,7 +2264,7 @@
  QIE_zhang_shi_zhao_hog:0 "章士钊"
  QIE_zeng_qi_hog:0 "曾琦"
  QIE_cheng_qi_tian_hog:0 "陈启天"
- QIE_chang_yan_sheng:0 "常燕生"
+ QIE_chang_yan_sheng_hog:0 "常燕生"
  QIE_zuo_sun_sheng_hog:0 "左舜生"
  QIE_gu_wei_jun_hog:0 "顾维钧"
  QIE_zhang_jun_mai_hog:0 "张君劢"
