--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -1,9 +1,12 @@
 ﻿l_simp_chinese:
  left_writer: "泛左联成员"
+
  KR_regional_traditionalist_leader: "地区传统派领袖"
  KR_head_of_intelligence: "间谍首脑"
  KR_republican_firebrand: "共和派鼓动者"
  KR_political_specialist: "政治专家"
+ KR_conductor_of_the_banking_clans: "银行界红人"
+
  KR_air_chief_reform_2: "空军改革\n（大师）"
  KR_army_chief_organisational_1: "陆军组织\n（专家）"
  KR_army_chief_organisational_2: "陆军组织\n（大师）"
