--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -194,6 +194,7 @@
  HNN_li_jiannong_for: "李剑农"
  HNN_li_jiannong_for_desc:0 "§Y生于：§!§L1880年6月10日；大清帝国、湖南省邵阳§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L李剑农生于一户农民家庭，长大后在当地的一所书院就读。李剑农对当地不学无术的官员极为不满。1904年，他进入湖南中路师范学堂学习，主修历史，并顺利毕业。在日本学习经济学期间，李剑农与孙中山和同盟会相识。清朝覆灭后，李剑农成为了民国的坚定拥护者。\n\n李剑农在自己的报纸上鼓吹联省自治，抨击军阀乱政。李剑农对联省自治和改良政治的研究引起了湖南省长赵恒惕的注意，赵恒惕于1922年邀请李剑农到长沙起草省宪。此后，李剑农留在湖南，帮助赵恒惕推行其政治纲领。李剑农在推动联省自治方面的工作使他成为了赵恒惕的得力助手和湖南联省派中的一位出色理论家。§!"
  HNN_huang_gonglue_sec: "黄公略"
+ HNN_huang_gong_lue_cos: "黄公略"
  HNN_huang_gonglue_sec_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
  HNN_he_yaozu: "贺耀祖" 
  POLITICS_HNN_HE_YAOZU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年5月8日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g贺耀祖生于一户富裕人家，曾在贺氏家族学校接受私塾教育，后来又入学玉潭书院。他先是就读于湖南陆军小学第一期，后来又进入武昌陆军第三中学，毕业后因表现优异被送往日本陆军士官学校学习。在那里，贺耀祖加入了同盟会，并参加了辛亥革命。在黄兴的建议下，他回到日本继续深造，并于1916年回国参与了孙中山领导的一系列革命运动。\n\n次年，贺耀祖加入了赵恒惕领导的湘军，并在六年内稳步晋升，从团长一路晋升到师长。然而贺耀祖却在北伐战争期间加入国民党，尽管及时的脱身使其最终免遭北伐失败所带来的巨大政治影响。贺耀祖虽才华横溢，但过往的叛变经历使其难以晋升地方高层——不过他仍是湖南省参谋部的重要成员。§!"
